--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
+doctype <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>Duer</title>
 </head>
 <body>
-    hello 
+    phase test
 </body>
 </html>
